force-app/main/default/objects/States__mdt/States__mdt.object-meta.xml
<CustomObject>
    <label>States</label>
    <pluralLabel>States</pluralLabel>
</CustomObject>