force-app/main/default/objects/States__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <referenceTo>Countries__mdt</referenceTo>
    <relationshipLabel>Country</relationshipLabel>
    <relationshipName>Country</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>