force-app/main/default/objects/States__mdt/fields/State_code__c.field-meta.xml
<CustomField>
    <fullName>State_code__c</fullName>
    <label>State code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>