force-app/main/default/objects/States__mdt/fields/State_Label__c.field-meta.xml
<CustomField>
    <fullName>State_Label__c</fullName>
    <label>State Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>